airflow/1.13.0/ingress.yaml
---
# Source: airflow/templates/webserver/webserver-ingress.yaml
################################
## Airflow Webserver Ingress
#################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-airflow-ingress
  labels:
    tier: airflow
    component: airflow-ingress
    release: apache-airflow
    chart: "airflow-1.13.0"
    heritage: Helm
  annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: apache-airflow-webserver
                port:
                  # name: airflow-ui
                  number: 8080
            path: /airflow
            pathType: ImplementationSpecific
            # pathType: Prefix
